# docdantic

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  Taskfile.yml  mkdocs.yml  pyproject.toml
docdantic/: __init__.py
tests/: test_docdantic.py
